@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-06-12 Kimmo
+ PATCH: [ 1486434 ] Copy Pathnames for right-only dir copies parent dir only
+  Src: DirView.cpp
+
 2006-05-31
  PATCH: [ 1483544 ] New compare method: by date and size
   Src: DiffWrapper.h DirScan.cpp Merge.rc PropCompare.cpp resource.h
